<resources>
    <string name="app_name"></string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="have_an_account">Have an account</string>
    <string name="guest">GUEST</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="email">Email</string>
    <string name="enter_you_email">Enter you email</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="button">Button</string>
    <string name="forget_password">Forget Password?</string>
    <string name="description">description</string>
    <string name="login">Login</string>
    <string name="not_have_an_account">Not have an account?\t\t </string>
    <string name="sign_up">Sign up</string>
    <string name="title_activity_sign_page">SignPage</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="enter_your_phone">Enter your phone</string>
    <string name="have_an_account_t">Have an account?\t\t\t</string>
    <string name="title_activity_change_pass">ChangePass</string>
    <string name="reset_your_password">Reset your password</string>
    <string name="reset_password">Reset Password</string>
    <string name="return_to_login">Return to login</string>
    <string name="hotel_name">Hotel Name</string>
    <string name="hotel_address">Hotel Address</string>
    <string name="phone">Phone</string>
    <string name="special">Special</string>
    <string name="price">Price</string>
    <string name="search">Search</string>
    <string name="favorite">Favorite</string>
    <string name="manage_account">Manage Account</string>
    <string name="rate">Rate</string>
    <string name="help_and_support">Help and Support</string>
    <string name="give_app_rating">Give app rating</string>
    <string name="useful_link">Useful link</string>
    <string name="customer_service">Customer Service</string>
    <string name="language">Language</string>
    <string name="about_us">About Us</string>
    <string name="deals">Deals</string>
    <string name="feedback">Feedback</string>
    <string name="hotel_name_lbl">hotel.name.lbl</string>
    <string name="rising_star_hotel">Rising Star Hotel</string>
    <string name="_22_75">$ 22 - 75</string>
    <string name="select_rooms">Select rooms</string>
    <string name="pay_at_the_property">Pay at the property</string>
    <string name="free_breakfast">Free breakfast</string>
    <string name="only_3_rooms_left">Only 3 rooms left</string>
    <string name="rating_stars">Rating stars</string>
    <string name="reserve">Reserve</string>
    <string name="includes_taxes_and_charges">Includes taxes and charges</string>
    <string name="choose_your_stay">Choose Your Stay</string>
    <string name="breakfast_available">Breakfast available</string>
    <string name="spacious_parking_lot">Spacious parking lot</string>
    <string name="your_information">Your Information</string>
    <string name="log_out">Log out</string>
    <string name="hotel_management">Hotel management</string>
    <string name="hotel_reservation">Hotel reservation</string>
    <string name="room_select">Room select ...</string>
    <string name="total">Total</string>
    <string name="room">Room ...</string>
    <string name="modify_hotel">Modify Hotel</string>
    <string name="g7">G7</string>
    <string name="group_7">Group 7</string>
    <string name="huy_quang_dang">Huy Quang Dang</string>
    <string name="khang_huynh_nguyen_huu">Khang Huynh Nguyen Huu</string>
    <string name="minh_le_trong_hoang">Minh Le Trong Hoang</string>
    <string name="quan_dao_manh">Quan Dao Manh</string>
    <string name="son_vu_tran_hoang">Son Vu Tran Hoang</string>
    <string name="save">Save</string>
    <string name="hotel_manage">Hotel Manage</string>
</resources>