<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/account_manage"
            android:icon="@drawable/userinfo"
            android:title="@string/manage_account" />

        <item
            android:id="@+id/favorite"
            android:icon="@drawable/like"
            android:title="@string/favorite" />

        <item
            android:id="@+id/rate"
            android:icon="@drawable/feedback"
            android:title="@string/feedback" />
    </group>

    <item android:title="@string/help_and_support">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/customer_service"
                    android:icon="@drawable/service"
                    android:title="@string/customer_service" />
                <item
                    android:id="@+id/rating_us"
                    android:icon="@drawable/rating"
                    android:title="@string/give_app_rating" />
            </group>
        </menu>
    </item>

    <item android:title="@string/useful_link">

        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/deals"
                    android:icon="@drawable/discount"
                    android:title="@string/deals" />
                <item
                    android:id="@+id/language"
                    android:icon="@drawable/lang"
                    android:title="@string/language" />
                <item
                    android:id="@+id/about_us"
                    android:icon="@drawable/information"
                    android:title="@string/about_us" />
            </group>
        </menu>
    </item>
</menu>