<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ImageView
        android:id="@+id/hotel_img"
        android:layout_width="140dp"
        android:layout_height="200dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/v1"
        app:layout_constraintTop_toTopOf="parent"
         />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/v1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.4" />

    <TextView
        android:id="@+id/hotel_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hotel_name"
        style="@style/RowRecyclerView"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/hotel_address"
        app:layout_constraintLeft_toLeftOf="@id/v1"

         />

    <TextView
        android:id="@+id/hotel_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hotel_address"
        style="@style/RowRecyclerView"

        app:layout_constraintTop_toBottomOf="@id/hotel_name"
        app:layout_constraintLeft_toLeftOf="@id/v1"
        app:layout_constraintBottom_toTopOf="@id/hotel_phone"
        />

    <TextView
        android:id="@+id/hotel_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        style="@style/RowRecyclerView"

        app:layout_constraintTop_toBottomOf="@id/hotel_address"
        app:layout_constraintLeft_toLeftOf="@id/v1"
        app:layout_constraintBottom_toTopOf="@id/hotel_special" />

    <TextView
        android:id="@+id/hotel_special"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/special"
        style="@style/RowRecyclerView"

        app:layout_constraintTop_toBottomOf="@id/hotel_phone"
        app:layout_constraintLeft_toLeftOf="@id/v1"
        app:layout_constraintBottom_toTopOf="@id/price_range" />

    <TextView
        android:id="@+id/price_range"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price"
        style="@style/RowRecyclerView"

        app:layout_constraintTop_toBottomOf="@id/hotel_special"
        app:layout_constraintLeft_toLeftOf="@id/v1"
        app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>