<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/b"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/theme5"
    tools:context=".WelcomeActivity"
    android:fitsSystemWindows="true"
    >

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/g1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/g2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.81" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="312dp"
        android:layout_height="250dp"
        android:layout_marginLeft="40dp"

        android:layout_marginRight="40dp"
        android:contentDescription="@string/app_name"

        android:src="@drawable/logo"
        app:layout_constraintBottom_toTopOf="@+id/g1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/guest_btn"
        style="@style/Widget.Button_Gradient"
        android:text="@string/guest"
        app:layout_constraintBottom_toTopOf="@+id/sign_btn"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/g1" />

    <Button
        android:id="@+id/sign_btn"
        style="@style/Widget.Button_Outline"
        android:text="@string/have_an_account"
        app:layout_constraintBottom_toBottomOf="@id/g2"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guest_btn"
        app:layout_constraintVertical_bias="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>