<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".LoginPage">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/g1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/sm_brg2"
        app:layout_constraintBottom_toTopOf="@id/g1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="234dp"
            android:layout_height="193dp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/g1"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/g2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.93" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/g3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.04" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/g4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.96" />

        <TextView
            android:id="@+id/emailLbl"
            style="@style/Widget.Label"
            android:text="@string/email"
            android:textFontWeight="800"


            app:layout_constraintBottom_toTopOf="@id/email"
            app:layout_constraintLeft_toLeftOf="@id/g3"
            app:layout_constraintTop_toTopOf="parent"


            />


        <EditText
            android:id="@+id/email"
            style="@style/Widget.Input"
            android:hint="@string/enter_you_email"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toTopOf="@id/passwordLbl"
            app:layout_constraintLeft_toLeftOf="@id/g3"
            app:layout_constraintRight_toRightOf="@id/g4"
            app:layout_constraintTop_toBottomOf="@id/emailLbl" />

        <TextView
            android:id="@+id/passwordLbl"
            style="@style/Widget.Label"

            android:text="@string/password"
            android:textFontWeight="800"


            app:layout_constraintBottom_toTopOf="@id/password"
            app:layout_constraintLeft_toLeftOf="@id/g3"
            app:layout_constraintTop_toBottomOf="@id/email" />

        <EditText
            android:id="@+id/password"

            style="@style/Widget.Input"

            android:hint="@string/enter_your_password"

            app:layout_constraintBottom_toTopOf="@id/submitBtn"
            app:layout_constraintLeft_toLeftOf="@id/g3"
            app:layout_constraintRight_toRightOf="@id/g4"
            app:layout_constraintTop_toBottomOf="@id/passwordLbl"

            />

        <Button
            android:id="@+id/submitBtn"
            style="@style/Widget.Button_Gradient"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"

            android:layout_marginTop="15dp"
            android:layout_marginRight="30dp"
            android:text="@string/login"

            app:layout_constraintBottom_toTopOf="@id/forgetPass"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password" />

        <TextView
            android:id="@+id/forgetPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/calibri_bold"
            android:text="@string/forget_password"
            android:textColor="#333333"
            android:textSize="18sp"
            android:layout_marginTop="10dp"

            app:layout_constraintBottom_toTopOf="@id/footer"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/submitBtn" />

        <LinearLayout
            android:id="@+id/footer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            app:layout_constraintRight_toRightOf="@id/g4"
            app:layout_constraintLeft_toLeftOf="@id/g3"
            app:layout_constraintTop_toBottomOf="@id/forgetPass"
            app:layout_constraintBottom_toTopOf="@id/divider"
            >

            <TextView
                android:id="@+id/signUpContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/not_have_an_account"

                android:textColor="#333333"
                android:fontFamily="@font/calibri_bold"
                android:textSize="16sp"
                />
            <TextView
                android:id="@+id/signUpLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"

                android:textColor="@color/link"
                android:fontFamily="@font/calibri_bold"
                android:textSize="19sp"
                />
        </LinearLayout>


        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:fontFamily="@font/calibri_regular"
            android:text="By using FLAMENCO, you agree with our Term and Policy of FLAMENCO"
            android:textAlignment="center"
            android:textColor="@color/hint"
            android:textSize="14sp"

            app:layout_constraintTop_toBottomOf="@id/divider"
            app:layout_constraintLeft_toLeftOf="@id/g3"
            app:layout_constraintRight_toRightOf="@id/g4"
            app:layout_constraintBottom_toBottomOf="@id/g2"

            />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="126dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="126dp"
            android:background="@color/label"
            app:layout_constraintBottom_toTopOf="@id/description"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/footer"

            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>